tests/negative/test_dot_no_type.orb
fnc main () () {
    eval (sym t:(i32 i32));
    eval (sym (r \(,t)));
    . r 0 0 0;
};